--- a/ios/Resources/CrashReporter.xib
+++ b/ios/Resources/CrashReporter.xib
@@ -149,7 +149,7 @@
                                 <subviews>
                                     <button opaque="NO" clipsSubviews="YES" tag="1120" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QbG-eo-FtE">
                                         <rect key="frame" x="15" y="15" width="345" height="50"/>
-                                        <color key="backgroundColor" red="0.7843137255" green="0.0" blue="0.1764705882" alpha="1" colorSpace="deviceRGB"/>
+                                        <color key="backgroundColor" red="0.086274509799999996" green="0.10980392160000001" blue="0.086274509799999996" alpha="1" colorSpace="deviceRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" priority="999" constant="345" id="SEu-Vn-JTA"/>
                                         </constraints>
